client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v2 

---

apiVersion: v1
kind: Service
metadata:
  name: client-service 
spec:
  type: ClusterIP
  selector:
    app: client
  ports:   
    - port: 3000
      targetPort: 3000
