server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pod 
      labels:
        app: server
    spec:
      containers:
        - name: test-server
          image: laithharb/server:v2 
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP 
  selector:
    app: server
  ports: 
    - protocol: TCP
      port: 3000
      targetPort: 3000
