ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: ingress-service 
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: testingandrew.com
      http:
        paths: 
          - path: /api/?(.*)
            backend:
              serviceName: server-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
